src/test/ui/error-codes/E0060.stderr
error[E0060]: this function takes at least 1 parameter but 0 parameters were supplied
  --> $DIR/E0060.rs:6:14
   |
LL |     fn printf(_: *const u8, ...) -> u32;
   |     ------------------------------------ defined here
...
LL |     unsafe { printf(); }
   |              ^^^^^^^^ expected at least 1 parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0060`.
